[package]
name = "clutch_node"
version = "0.1.0"
edition = "2021"

# Specify the binary target
[[bin]]
name = "clutch-node"
path = "src/main.rs"

[dev-dependencies]
serial_test = "3.1.1"

[dependencies]
rocksdb = "0.22.0"
config = "0.14"
dotenv = "0.15"
sha2 = "0.10.8"
sha3 = "0.10.1"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
secp256k1 = { version = "0.29.0", features = ["recovery", "rand"] }
rand = "0.8.4"
hex = "0.4.3"
backtrace = "0.3.55"
tokio = { version = "1.38.0", features = ["full"] }
futures = { version = "0.3.30" }
libp2p = { version = "0.53.2", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.7", features = ["derive"] }
tokio-tungstenite = "0.23.1"
tungstenite = "0.23.0"
rlp = "0.5.2"
